# oop_stream

./: README.md
stream1/: stream1.pptx  stream1.sln
stream1/Debug/: stream1.ilk
stream1/stream1/: Account.cpp  Account.h  Bank.cpp  Bank.h  CMakeLists.txt  ClassDiagram.cd  Client.cpp  Client.h  PartnerAccount.cpp  PartnerAccount.h  Person.cpp  Person.h  stream1.cpp  stream1.vcxproj  stream1.vcxproj.filters
stream1/stream1/Debug/: vc142.idb
stream1/stream1/Debug/stream1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  stream1.lastbuildstate
stream2/savci/: savci.sln
stream2/savci/Debug/: savci.ilk
stream2/savci/savci/: Cat.h  Cow.h  Dog.h  Mammal.h  savci.cpp  savci.vcxproj  savci.vcxproj.filters
stream2/savci/savci/Debug/: vc142.idb
stream2/savci/savci/Debug/savci.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  savci.lastbuildstate
stream2/tvary/: Rectangle.cpp  Rectangle.h  RectangularShape.cpp  RectangularShape.h  Square.cpp  Square.h  main.cpp
